# la-poule-qui-chante

./: pyproject.toml
Archive/: test.ipynb
Programme/: clustering.ipynb  data_processing.ipynb  exploratory_analysis.ipynb
